# YOLO11-pose

./: .gitignore  README.md  test_gpio.sh
NX_volleyball/stereo_3d_pipeline/: CMakeLists.txt  README.md  claude.md  package.xml
NX_volleyball/stereo_3d_pipeline/config/: create_640.py  create_dual_dla.py  disparity_offset_fit_20260709.json  fix_yaml.py  pipeline.yaml  pipeline_dla.yaml  pipeline_dual_dla.yaml  pipeline_dual_yolo_roi.yaml  pipeline_rdk_joint.yaml  pipeline_record_p0p1.yaml  pipeline_roi.yaml  pipeline_roi_freerun.yaml  pipeline_roi_mixformer.yaml  pipeline_roi_nanotrack.yaml  pipeline_splitA.yaml  pipeline_triple.yaml  pipeline_yolo11s_960.yaml  pipeline_yolo11s_960_lighttrack.yaml  pipeline_yolo11s_960_mixformer.yaml  pipeline_yolo11s_960_nanotrack.yaml  pipeline_yolo11s_960_siamfc.yaml  pipeline_yolo26_gpu.yaml  pipeline_yolo26_mixed.yaml  pipeline_yolo26_mixed_lighttrack.yaml  pipeline_yolo26_mixed_mixformer.yaml  pipeline_yolo8m_960.yaml  pipeline_zed.yaml
NX_volleyball/stereo_3d_pipeline/docs/: 01_项目总览.md  02_架构设计.md  03_模型与推理.md  04_标定与相机.md  05_部署指南.md  06_性能优化.md  07_训练流程.md  08_故障排除.md  100fps_optimization_summary.md  DLA_GPU_hybrid_evaluation.md  DLA_GPU混合推理指南.md  DLA_comprehensive_report.md  EXPORT_GUIDE.md  GPU真实关键点匹配与100fps架构评估.md  NX性能测试报告.md  int8_calibration_guide.md  jtop_jetpack_fix.md  model_info.md  neural_feature_matching.md  performance_profiling_guide.md  sot-tracking-design.md  stereo_depth_report.md  单双目测距原理.md  开发记忆.md  引擎矩阵综合测试报告.md  文档索引.md  替代方案对比分析报告.md  模型导出与引擎构建指南.md  海康相机序列号绑定.md  海康相机配置手册.md  深度测量与轨迹融合架构评审.md  深度算法对比报告.md  相机标定实施手册.md  算法双路径对照表.md  追踪模型导出与引擎构建.md
NX_volleyball/stereo_3d_pipeline/scripts/: adapt_nanotrack_onnx.py  analyze_4m.py  analyze_control_gate_csv.py  analyze_dynamic.py  analyze_p1_candidate_csv.py  analyze_raw.py  analyze_static.py  analyze_traj.py  analyze_z.py  benchmark.sh  build_960_engines.sh  build_dla_engine.sh  build_engine.sh  calibrate_1m.py  check_onnx.py  check_stereo.py  convert_model.sh  deploy_and_test.sh  deploy_to_nx.py  diagnose_stereo.py  enum_cameras.py  export_aliked_dcn_extractor_onnx.py  export_lightglue_extractor_onnx.py  export_lighttrack.py  export_mixformerv2_onnx.py  export_nanotrack_onnx.py  export_siamfc.py  export_xfeat_extractor_onnx.py  fix_cusparselt.sh  install_rdk_chrony_client.sh  lightglue_extractor_models.py  nanotrack_onnx_adapter.py  nx_algorithm_candidate_summary.py  nx_algorithm_case_baseline.py  nx_algorithm_case_p2_cuda.py  nx_algorithm_case_p2_neural.py  nx_algorithm_case_p2_neural_aliked.py  nx_algorithm_case_p2_neural_superpoint.py  nx_algorithm_case_p2_neural_xfeat.py  nx_algorithm_case_sweep_scalars.py  (+43 more)
NX_volleyball/stereo_3d_pipeline/src/: main.cpp  main_cli_options.cpp  main_cli_options.h  main_config_loaders.cpp  main_config_loaders.h  main_display_capture.h  main_display_helpers.h  main_display_render.h  main_display_types.h  main_dual_yolo_config.cpp  main_dual_yolo_config.h  main_realtime_debug_dump.cpp  main_realtime_debug_dump.h  main_realtime_debug_dump_writer.cpp  main_recording_config_loaders.cpp  main_runtime_overrides.cpp  main_runtime_overrides.h  stereo_depth_viewer.cpp  stereo_depth_viewer_algorithms.h  stereo_depth_viewer_args.cpp  stereo_depth_viewer_args.h  stereo_depth_viewer_benchmark.cpp  stereo_depth_viewer_benchmark.h  stereo_depth_viewer_depth_utils.h  stereo_depth_viewer_diagnostics.h  stereo_depth_viewer_models.cpp  stereo_depth_viewer_models.h  stereo_depth_viewer_ui.cpp  stereo_depth_viewer_ui.h  stereo_depth_viewer_vpi.h
NX_volleyball/stereo_3d_pipeline/tests/: depth_candidate_selection_test.cpp  fusion_timing_test.cpp  hybrid_depth_test.cpp  nx_observation_quality_test.cpp  source_epoch_test.cpp
NX_volleyball/stereo_3d_pipeline/tools/: compare_offline_online_depth.py  compare_offline_online_depth_mappings.py  compare_offline_online_depth_report.py  compare_offline_online_depth_values.py  hik_frame_metadata_probe.cpp  hik_frame_metadata_probe_args.cpp  hik_frame_metadata_probe_args.h  hik_frame_metadata_probe_stats.cpp  hik_frame_metadata_probe_stats.h  neural_feature_probe.py  neural_feature_probe_config.py  neural_feature_probe_outputs.py  neural_feature_probe_runner.py  offline_volleyball_calibration.py  offline_volleyball_color_features.py  offline_volleyball_color_matching.py  offline_volleyball_color_patch_scoring.py  offline_volleyball_depth_math.py  offline_volleyball_descriptor_matching.py  offline_volleyball_keypoint_config.py  offline_volleyball_keypoint_masks.py  offline_volleyball_keypoint_methods.py  offline_volleyball_keypoint_probe.py  offline_volleyball_keypoint_report.py  offline_volleyball_patch_matching.py  offline_volleyball_patch_scores.py  offline_volleyball_probe_matching.py  offline_volleyball_probe_models.py  offline_volleyball_probe_roi.py  offline_volleyball_probe_triangulation.py  offline_volleyball_probe_validation.py  offline_volleyball_probe_visualization.py  offline_volleyball_roi_candidates.py  offline_volleyball_roi_hough.py  offline_volleyball_roi_segmentation.py  offline_volleyball_sequence_probe.py  offline_volleyball_sequence_summary.py  offline_yolo_iou_config.py  offline_yolo_iou_fake_cases.py  offline_yolo_iou_fallback_regression.py  (+5 more)
NX_volleyball/stereo_3d_pipeline/trajectory_fusion/: README.md  __init__.py  analyze_candidate_consistency.py  apply_d0_correction.py  audit_reliability_methods.py  audit_training_inputs.py  backfill_known_z.py  build_dataset_manifest.py  calibrate_disparity_offset.py  check_dataset.py  check_dataset_fields.py  check_dataset_frame_summary.py  check_dataset_metrics.py  check_dataset_print.py  check_dataset_stats.py  compare_workflows.py  dataset.py  dataset_feature_rows.py  dataset_feature_schema.py  dataset_features.py  dataset_io.py  dataset_legacy_rows.py  dataset_method_schema.py  dataset_normalization.py  dataset_schema.py  depth_polyfit_smoother.py  evaluate_calibrated_smoother.py  evaluate_fusion.py  evaluate_fusion_report.py  evaluate_fusion_stats.py  evaluate_reliability_checkpoint.py  evaluate_reliability_smoother.py  fit_method_calibration.py  (+28 more)
(+502 files in other folders)
